--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" type="image/gif/png" href="logo.png">
   <title>Mountain Travel</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
@@ -11,7 +12,7 @@
   <link rel="stylesheet" href="startupSite.css">
 </head>
 <body>
-  <!-- Forked from a template on Tutorialzine: https://tutorialzine.com/2016/06/freebie-landing-page-template-with-flexbox -->
+  
   <header>
     <h2><a href="#">Mountain Travel</a></h2>
     <nav>
@@ -106,80 +107,3 @@
 </body>
 </html>
 
-
-
-<!-- 
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Mountain Travel</title>
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
-  <link rel="stylesheet" href="startupSite.css">
-</head>
-<body>
-  
-  <header>
-    <h2><a href="#">Mountain Travel</a></h2>
-    <nav>
-      <li><a href="#">Tours</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Contact</a></li>
-    </nav>
-  </header>
-
-  <section class="hero">
-    <div class="background-image" style="background-image: url(/main.jpg);"></div>
-    <div class="hero-content-area">
-      <h1>Mountain Travel</h1>
-      <h3>Unmissable Adventure Tours Around The World</h3>
-      <a href="#" class="btn">Contact Us Now</a>
-    </div>
-  </section>
-  
-</body>
-</html> -->
-
-<!-- <html>
-    <head>
-        <link rel="stylesheet" href="startupSite.css">
-            <meta charset="UTF-8">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Mountain Travel</title>
-    </head>
-    <body>
-     
-    <header>
-        <h2><a href="#">Mountain Travel</a></h2>
-        <nav>
-                <li><a href="#">Tours</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-
-        </nav>
-    </header>
-    <section class="hero">
-        <div class="background-image" style="background-image: url(https://images.unsplash.com/photo-1485809069980-bdd865d520ae?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80)"></div>
-        <div class="hero-content-area">
-            <h1>Mountain Travel</h1>
-            <h3>Unmissable Adventure tours around the world</h3>
-            <a href="" class="btn">Contact us now</a>
-        </div>
-    </section>
-       
-    <section class="destinations">
-        <h3 class="title">Some of our destinations:</h3>
-        <p>Tired of oceans? Are the plains too plain? Come along with us on one of our montain adventures. Here are some pictures from people who have had elevated experiences with us.</p>
-        <hr>
-
-        <ul class="grid">
-            <li class="small" style="background-image: url();"></li>
-            <li class="large" style="background-image: url();"></li>
-            <li class="large" style="background-image: url();"></li>
-            <li class="small" style="background-image: url();"></li>
-        </ul>
-    </section>
-</body>
-</html> -->
